--- a/src/style.css
+++ b/src/style.css
@@ -16,36 +16,78 @@ body, html, #app {
   }
 }
 
-
+@media only screen and (max-width: 600px) {
+  .appear-enter {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  .appear-enter-active {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: opacity 300ms, transform 300ms;
+  }
+  .appear-exit {
+    opacity: 1;
+  }
+  .appear-exit-active {
+    opacity: 0;
+    transform: translateY(200px);
+    transition: opacity 300ms, transform 300ms;
+  }
+  
+}
+@media only screen and (min-width: 600px) {
+  .appear-enter {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  .appear-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 300ms, transform 300ms;
+  }
+  .appear-exit {
+    opacity: 1;
+  }
+  .appear-exit-active {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 300ms, transform 300ms;
+  }  
+}
+/* 
 .fade-enter {
   opacity: 0;
+  transform: scale(0.9);
 }
 .fade-enter-active {
   opacity: 1;
-  transition: opacity 1000ms;
+  transform: translateX(0);
+  transition: opacity 300ms, transform 300ms;
 }
 .fade-exit {
   opacity: 1;
 }
 .fade-exit-active {
   opacity: 0;
-  transition: opacity 1000ms;
+  transform: scale(0.9);
+  transition: opacity 300ms, transform 300ms;
 }
 
-.alert-enter {
+.slide-enter {
   opacity: 0;
-  transform: scale(0.9);
+  transform: translateY(200px);
 }
-.alert-enter-active {
+.slide-enter-active {
   opacity: 1;
-  transform: translateX(0);
+  transform: translateY(0px);
   transition: opacity 300ms, transform 300ms;
 }
-.alert-exit {
+.slide-exit {
   opacity: 1;
 }
-.alert-exit-active {
+.slide-exit-active {
   opacity: 0;
-  transform: scale(0.9);
+  transform: translateY(200px);
   transition: opacity 300ms, transform 300ms;
-}
+} */
